@@ -2,6 +2,7 @@
 
 	* config.c: Implemented Sharpness, Capture Delay and Burst
 	  Interval standard PTP properties.
+	* config.c: Implemented Fuji Image Format and Release/Capture mode.
 
 2009-10-29  Marcus Meissner  <marcus@jet.franken.de>
 
